--- a/404.html
+++ b/404.html
@@ -1,1 +1,8 @@
-Sorry this page does not exist =(
+---
+layout: page
+title: 404
+tagline: Page not found
+---
+<p>
+    Sorry this page does not exist =(
+</p>
