--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@ javascript: [ search ]
 ---
 
 <div id="contents">
-    Searching for results...
+    <p>Searching for results...</p>
 </div>
 
 <script type="text/x-mustache" id="srch">
