--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@ layout: page
 title : Search results
 javascript: [ search ]
 
-mustacheSetDelimiter: "{{=<% %>=}}"
+setMustacheDelimeter: "{{=<% %>=}}"
 ---
 
 <div id="contents">
