--- a/search.html
+++ b/search.html
@@ -13,7 +13,7 @@ setMustacheDelimeter: "{{=<% %>=}}"
 <script type="text/x-mustache" id="srch">
     {{ page.setMustacheDelimeter }}
     <%#results%>
-        <article class="post teaser">
+        <div class="result post teaser">
             <h3 class="title">
                 <%title%>
                 <small><%date.day%> <%date.month%> <%date.year%></small>
